--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <span class="section4-sec2">이호선</span>
                     </div>
                     <div class="col">
-                        <button onclick="document.location.href='tel:010-4280-6687'" class="section4-sec3-g">
+                        <button onclick="document.location.href='tel:010-4820-6687'" class="section4-sec3-g">
                             <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z"/>
                             </svg>
@@ -372,7 +372,7 @@
                             </button>
                         </div>
                         <div class="modal-body section7-modal section7-modal-content">
-                            신부 혼주 : 농협 352-1178-4416-13 한정연
+                            신부 혼주 : 카카오뱅크 7979-79-13360 이호선
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
