--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,target-densitydpi=medium-dpi">
     <meta name="description" content="김승목 ❤️ 이호선 결혼식에 초대합니다.">
@@ -55,17 +57,20 @@
 				margin-right: 10px;
 				font-size: 13px;
 		}
+		.line-normal {
+			background-color: #68c157; /* 일반 색상 */
+		}
 		.line-trunk {
 			background-color: #446de3; /* 간선 색상 */
 		}
-		.line-branch {
-			background-color: #68c157; /* 지선 색상 */
+		.line-metropolitan {
+			background-color: #e96358; /* 광역, 직행선 색상 */
+		}
+		.line-seat {
+			background-color: #7e46cb; /* 좌석 색상 */
 		}
 		.line-airport {
-			background-color: #7e46cb; /* 공항선 색상 */
-		}
-		.line-metropolitan {
-			background-color: #e96358; /* 광역선 색상 */
+			background-color: #63a5d3; /* 공항선 색상 */
 		}
 		
 		#backToTop {
@@ -548,10 +553,12 @@
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body section6-location-sub">
-                                <span class="bus-line line-trunk">간선버스</span> : 652, 672 <br/>
-                                <span class="bus-line line-branch">지선버스</span> : 6632 <br/>
-                                <span class="bus-line line-airport">공항버스</span> : 6018 <br/>
-                                <span class="bus-line line-metropolitan">광역버스</span> : 770
+                                <span class="bus-line line-normal">일반버스</span> : 5-3, 6-2, 23-2, 27, 50-1, 52, 56, 59, 59-1, 61, 66, 70 <br/>
+                                <span class="bus-line line-trunk">간선버스</span> : 24, 37, 87 <br/>
+                                <span class="bus-line line-metropolitan">광역버스</span> : 1601, 9300 <br/>
+                                <span class="bus-line line-metropolitan">직행버스</span> : 1001, 8106, 8906, 9008 <br/>
+                                <span class="bus-line line-seat">좌석버스</span> : 302, 700 <br/>
+                                <span class="bus-line line-airport">공항버스</span> : 7001, 8165 
                             </div>
                         </div>
                     </div>
@@ -565,13 +572,8 @@
                         </div>
                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body section6-location-sub">
-                                올림픽 대로 방면 <br/>
-                                올림픽 대로 > 강서구청 방면 진입 > 가양사거리 우회전 후 150m 전방 위치 <br/>
-                                (건너편 위치 : 150m앞 유턴 후 주차장 진입) <br/>
-                                <br/>
-                                강변북로 방면 <br/>
-                                강변북로 > 가양대로 진입 > 가양역사거리 50m 앞 가양역 8번출구 앞에서 우회전 >
-                                화곡로 69길 500m 사거리 우회전 > 50m앞 가양 3,5단지 사거리 우회전 > 150m 앞 주차장 진입 <br/>
+                                네비게이션: "소풍컨벤션웨딩홀 " 또는 "부천 터미널 소풍" 입력 <br/>
+                                &nbsp;&nbsp;&nbsp;· [주소검색] 경기도 부천시 원미구 송내대로 239<br/>
                             </div>
                         </div>
                     </div>
