--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		  width: 50px;
 		  height: 50px;
 		  font-size: 24px;
-		  background-color: #DDE6C0;
+		  background-color: #C1D0B5;
 		  color: white;
 		  border: none;
 		  border-radius: 50%;
@@ -146,7 +146,7 @@
         <div class="wow fadeInUp">
             <p class="top-title">김승목 · 이호선</p>
             <p class="top-title-sub">토요일 18시 30분</p>
-            <p class="top-title-sub">소풍컨벤션웨딩홀 7층 </p>
+            <p class="top-title-sub">소풍컨벤션웨딩홀 7층 베일리홀</p>
             <br/><br/><br/>
             <hr class="cover-container"/>
             <br/>
@@ -495,7 +495,7 @@
             <br/><br/>
             <p class="wow fadeInUp section6-title section6-main">Location</p>
             <div class="wow fadeInUp  section6-title">
-                <p class="section6-location-main" style="margin-bottom: 0;">소풍컨벤션웨딩홀 7층</p>
+                <p class="section6-location-main" style="margin-bottom: 0;">소풍컨벤션웨딩홀 7층 베일리홀</p>
                 <p class="section6-location-sub" style="text-align: center;">
                     경기도 부천시 원미구 송내대로 239
                 </p>
