--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
             $("#d-day").html(result);
         });
     </script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YGW3XRM4W6"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-YGW3XRM4W6');
+	</script>
 </head>
 <body class="text-center">
 <div class="top-div">
