--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <body class="text-center">
 <div class="top-div">
     <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 0.5em; margin-right: 0.5em; font-size: 2rem;">
+        <h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 3.8em; margin-right: 2.2em; font-size: 2rem;">
             <span style="letter-spacing : -0.13em; margin-right: 0.1em">⎽⎽</span><br/>
             11 <br/>
             月 <br/>
@@ -207,88 +207,58 @@
             <div id="carouselExampleControls" class="wow fadeIn carousel slide section3-image" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/test/1.jpg" class="d-block w-100">
+                        <img src="img/1000021718.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/2.jpg" class="d-block w-100">
+                        <img src="img/1000021719.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/3.jpg" class="d-block w-100">
+                        <img src="img/1000021720.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/4.jpg" class="d-block w-100">
+                        <img src="img/1000021721.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/5.jpg" class="d-block w-100">
+                        <img src="img/1000021722.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/6.jpg" class="d-block w-100">
+                        <img src="img/1000021723.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/7.jpg" class="d-block w-100">
+                        <img src="img/1000021724.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/8.jpg" class="d-block w-100">
+                        <img src="img/1000021726.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/9.jpg" class="d-block w-100">
+                        <img src="img/1000021727.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/10.jpg" class="d-block w-100">
+                        <img src="img/1000021728.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/11.jpg" class="d-block w-100">
+                        <img src="img/1000021729.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/12.jpg" class="d-block w-100">
+                        <img src="img/1000021730.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/13.jpg" class="d-block w-100">
+                        <img src="img/1000021731.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/14.jpg" class="d-block w-100">
+                        <img src="img/1000021732.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/15.jpg" class="d-block w-100">
+                        <img src="img/1000021733.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/16.jpg" class="d-block w-100">
+                        <img src="img/1000021734.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/17.jpg" class="d-block w-100">
+                        <img src="img/1000021735.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/test/18.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/19.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/20.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/21.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/22.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/23..jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/24.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/25.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/26.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/27.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/test/28.jpg" class="d-block w-100">
+                        <img src="img/header.jpg" class="d-block w-100">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
