--- a/index.html
+++ b/index.html
@@ -142,13 +142,10 @@
 <body class="text-center">
 <div class="top-div">
     <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 3.8em; margin-right: 2.2em; font-size: 2rem;">
-            <span style="letter-spacing : -0.13em; margin-right: 0.1em">⎽⎽</span><br/>
-            11 <br/>
-            月 <br/>
-            8 <br/>
-            日 <br/>
-            <span style="letter-spacing : -0.13em; margin-right: 0.1em;">⎺⎺</span>
+        <h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 3.8em; margin-right: 25%; font-size: 2rem;">
+            <span style="letter-spacing : -0.13em; margin-right: 0.1em">⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽</span><br/>
+            11月&nbsp;8日 <br/>
+            <span style="letter-spacing : -0.13em; margin-right: 0.1em;">⎺⎺⎺⎺⎺⎺⎺⎺⎺⎺</span>
         </h1>
     </header>
     <main role="main" class="inner">
