--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 
 		#sharelink-toast.sharelink-toast {
 		  position: fixed;
-		  bottom: 40px;
+		  top: 40px;
+		  width: 25%;
 		  left: 50%;
 		  transform: translateX(-50%);
 		  background: #CCE5FF;
@@ -137,13 +138,13 @@
 		  font-size: 15px;
 		  opacity: 0;
 		  pointer-events: none;
-		  transition: opacity 0.5s ease, bottom 0.5s ease;
+		  transition: opacity 0.5s ease, top 0.5s ease;
 		  z-index: 9999;
 		}
 
 		#sharelink-toast.sharelink-toast.show {
 		  opacity: 1;
-		  bottom: 60px;
+		  top: 60px;
 		}
 		
 
