--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html translate="no">
 
 <head>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -18,6 +18,7 @@
     <meta property="og:image:height" content="800" />
     <meta property="og:description" content="사랑으로 물들어가는 계절, 연인에서 부부라는 이름으로 평생을 함께 하고자 합니다." />
     <meta name="format-detection" content="telephone=no" />
+    <!-- <meta name="google" content="notranslate"> -->
     <title>승목❤️호선</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -201,51 +202,51 @@
         gtag('config', 'G-YGW3XRM4W6');
     </script>
     <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const audio = document.getElementById("bg-music");
-  const btn = document.getElementById("music-toggle");
-  const msgBar = document.getElementById("music-msg-bar");
-  let userInitiated = false;
+        document.addEventListener("DOMContentLoaded", () => {
+            const audio = document.getElementById("bg-music");
+            const btn = document.getElementById("music-toggle");
+            const msgBar = document.getElementById("music-msg-bar");
+            let userInitiated = false;
 
-  // 음악 준비되면 메시지 바만 2초간 표시
-  audio.addEventListener("canplaythrough", () => {
-    msgBar.classList.add("visible");
+            // 음악 준비되면 메시지 바만 2초간 표시
+            audio.addEventListener("canplaythrough", () => {
+                msgBar.classList.add("visible");
 
-    setTimeout(() => {
-      msgBar.classList.remove("visible");
-    }, 2000);
-  });
+                setTimeout(() => {
+                    msgBar.classList.remove("visible");
+                }, 2000);
+            });
 
-  // on/off 버튼 클릭 시 음악 토글
-  btn.addEventListener("click", () => {
-    if (!userInitiated) {
-      audio.volume = 0.5;
-      userInitiated = true;
-    }
+            // on/off 버튼 클릭 시 음악 토글
+            btn.addEventListener("click", () => {
+                if (!userInitiated) {
+                    audio.volume = 0.5;
+                    userInitiated = true;
+                }
 
-    if (audio.paused) {
-      audio.play().catch(err => console.warn("재생 실패:", err));
-      btn.textContent = "🎵";
-    } else {
-      audio.pause();
-      btn.textContent = "🔇";
-    }
-  });
-});
+                if (audio.paused) {
+                    audio.play().catch(err => console.warn("재생 실패:", err));
+                    btn.textContent = "🎵";
+                } else {
+                    audio.pause();
+                    btn.textContent = "🔇";
+                }
+            });
+        });
     </script>
 </head>
 
 <body class="text-center">
-<!-- 음악 제어 버튼 (항상 고정) -->
-<button id="music-toggle" title="음악 재생/정지">🔇</button>
+    <!-- 음악 제어 버튼 (항상 고정) -->
+    <button id="music-toggle" title="음악 재생/정지">🔇</button>
 
-<!-- 메시지 바 -->
-<div id="music-msg-bar" class="music-msg-bar">
-  <div class="ready-message">배경음악이 준비되었습니다.</div>
-</div>
+    <!-- 메시지 바 -->
+    <div id="music-msg-bar" class="music-msg-bar">
+        <div class="ready-message">배경음악이 준비되었습니다.</div>
+    </div>
 
-<!-- 음악 파일 -->
-<audio id="bg-music" src="music.mp3" preload="auto" loop></audio>
+    <!-- 음악 파일 -->
+    <audio id="bg-music" src="music.mp3" preload="auto" loop></audio>
     <div class="top-div">
         <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
             <!--<h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 38%; margin-right: 25%; font-size: 2rem;">
