--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
     <!-- 음악 파일 -->
     <audio id="bg-music" src="music.mp3" preload="auto" loop></audio>
     <div class="top-div">
-        <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <!-- <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> -->
+        <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column hero-section">
+
             <!--<h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 38%; margin-right: 25%; font-size: 2rem;">
             <span style="letter-spacing : -0.13em; margin-right: 0.1em">⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽</span><br/>
             11月&nbsp;8日 <br/>
