--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
     <!-- 음악 파일 -->
     <audio id="bg-music" src="music.mp3" preload="auto" loop></audio>
     <div class="top-div">
-        <!-- <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> -->
-        <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column hero-section">
+        <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
             <!--<h1 class="wow fadeIn cover-heading" style="text-align: right; margin-top: 38%; margin-right: 25%; font-size: 2rem;">
             <span style="letter-spacing : -0.13em; margin-right: 0.1em">⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽</span><br/>
@@ -782,7 +781,7 @@
         // 최초 실행 및 주기적 업데이트
         updateDdayCountdown();
         setInterval(updateDdayCountdown, 60 * 1000); // 1분 간격으로 업데이트
-    </script>
+</script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
