--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             신랑 김승목 신부 이호선 올림
         </p>
         <br/><br/><br/><br/>-->
-            <div class="section3 inner cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <!-- <div class="section3 inner cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
                 <p class="wow fadeInUp section3-title section3-main">Gallery</p>
                 <div id="carouselExampleControls" class="wow fadeIn carousel slide section3-image" data-ride="carousel">
                     <div class="carousel-inner">
@@ -380,6 +380,26 @@
                     </a>
                 </div>
                 <br /><br /><br />
+            </div> -->
+            <div class="gallery-container container">
+                
+                <p class="wow fadeInUp section3-title section3-main">Gallery</p>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="gallery-grid"></div>
+                <button id="load-more" class="btn btn-outline-secondary btn-block mt-3">더보기</button>
+            </div>
+            <!-- Modal Viewer -->
+            <div id="imageModal" class="modal fade" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content bg-transparent border-0 text-center">
+                        <div class="modal-body">
+                            <img id="modalImage" src="" class="img-fluid" />
+                        </div>
+                        <div class="modal-footer justify-content-between border-0">
+                            <button type="button" id="prevBtn" class="btn btn-light">← 이전</button>
+                            <button type="button" id="nextBtn" class="btn btn-light">다음 →</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="wow fadeInUp">
                 <br /><br />
@@ -791,6 +811,78 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+        <script>
+  const allImages = [
+    'img/1.jpg', 'img/2.jpg', 'img/3.jpg',
+    'img/4.jpg', 'img/5.jpg', 'img/6.jpg',
+    'img/7.jpg', 'img/8.jpg', 'img/9.jpg',
+    'img/10.jpg', 'img/11.jpg', 'img/12.jpg',
+    'img/13.jpg', 'img/14.jpg', 'img/15.jpg',
+    'img/16.jpg', 'img/17.jpg', 'img/18.jpg'
+  ];
+
+  let shownCount = 0;
+  const perLoad = 9;
+  const galleryGrid = document.getElementById('gallery-grid');
+  const loadMoreBtn = document.getElementById('load-more');
+
+  function renderImages() {
+    const slice = allImages.slice(shownCount, shownCount + perLoad);
+    slice.forEach((src, idx) => {
+      const col = document.createElement('div');
+      col.className = 'col-4 p-0';
+      col.innerHTML = `<img src="${src}" alt="" data-index="${shownCount + idx}" class="img-thumbnail">`;
+      galleryGrid.appendChild(col);
+    });
+    shownCount += slice.length;
+
+    if (shownCount >= allImages.length) {
+      loadMoreBtn.style.display = 'none';
+    }
+  }
+
+  loadMoreBtn.addEventListener('click', renderImages);
+  renderImages(); // 최초 9장 로드
+
+  // Modal Viewer
+  const modal = new bootstrap.Modal(document.getElementById('imageModal'));
+  const modalImage = document.getElementById('modalImage');
+  let currentIndex = 0;
+
+  galleryGrid.addEventListener('click', (e) => {
+    if (e.target.tagName === 'IMG') {
+      currentIndex = parseInt(e.target.dataset.index);
+      modalImage.src = allImages[currentIndex];
+      modal.show();
+    }
+  });
+
+  document.getElementById('prevBtn').addEventListener('click', () => {
+    currentIndex = (currentIndex - 1 + allImages.length) % allImages.length;
+    modalImage.src = allImages[currentIndex];
+  });
+
+  document.getElementById('nextBtn').addEventListener('click', () => {
+    currentIndex = (currentIndex + 1) % allImages.length;
+    modalImage.src = allImages[currentIndex];
+  });
+
+  // 터치 제스처 추가
+  let touchStartX = 0;
+  modalImage.addEventListener('touchstart', (e) => {
+    touchStartX = e.changedTouches[0].screenX;
+  });
+
+  modalImage.addEventListener('touchend', (e) => {
+    let touchEndX = e.changedTouches[0].screenX;
+    if (touchStartX - touchEndX > 50) {
+      document.getElementById('nextBtn').click();
+    } else if (touchEndX - touchStartX > 50) {
+      document.getElementById('prevBtn').click();
+    }
+  });
+</script>
+
 </body>
 
 </html>
